--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="header__row row">
             <div class="col"><p class="header__logo">acad.</p></div>
-            <div class="col second"><img src="img/menu.png" alt="humburger"></div>
+            <div class="second"><img src="img/menu.png" alt="humburger"></div>
         </div>
         <div class="header__main">
             <div class="col-lg-12">
