--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row">
             <div class="col"><p class="header__logo">acad.</p></div>
-            <div class="col "><img src="img/menu.png" alt="humburger"></div>
+            <div><img src="img/menu.png" alt="humburger"></div>
         </div>
         <div class="header__main row">
             <div class="col-lg-12">
