--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="header__main row">
             <div class="col-lg-12">
                 <h1 class="header__main--title">about us</h1>
-                <h3 class="header__main--subtitle"><a href="index.html" class="header__links">home</a> / <a href="index2.html"
+                <h3 class="header__main--subtitle"><a href="index.html" class="header__links">home</a>/<a href="index2.html"
                                                                                                   class="header__links">about</a> </h3>
             </div>
         </div>
@@ -233,7 +233,7 @@
         </div>
     </section>
 </main>
-<footer class=" row ">
+<footer class="footer">
     <div class="container">
         <div class="row">
         <ul class="footer__links col-lg-6 col-md-6 col-sm-6">
