--- a/index2.html
+++ b/index2.html
@@ -117,7 +117,7 @@
         </div>
     </div>
 </section>
-<footer>
+<footer class="footer">
     <div class="container">
         <div class="row"   id="contacts">
             <ul class="footer__links col">
