--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="about">
         <div class="container">
             <div class="about row">
-                <div class="about__first col-lg-6">
+                <div class="about__first col">
                     <h2 class="about__title">about us</h2>
                     <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Alias, amet blanditiis doloribus ducimus ea earum eligendi esse nostrum omnis placeat
@@ -42,7 +42,7 @@
                         Commodi culpa delectus ea error illo inventore, minima nesciunt nulla saepe veritatis vitae.</span>
                     </p>
                 </div>
-                <div class="about__second col-lg-6">
+                <div class="about__second col">
                     <h2 class="about__title">what we do</h2>
                     <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         A accusamus assumenda consequuntur eius enim nisi praesentium, sapiente? Accusamus animi aspernatur at atque corporis,
@@ -66,37 +66,37 @@
     <section class="tools--wrap">
         <div class="container">
             <div class="tools row">
-                <div class="tools__ttem col-lg-4">
+                <div class="tools__ttem col-4">
                     <h2 class="tools__title"><i class="fa fa-mobile t" aria-hidden="false"></i>fully responcive</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad alias consectetur deserunt, eos
                         eveniet incidunt, minima mollitia natus necessitatibus nihil odit perspiciatis repellat saepe,
                         sapiente veniam? Debitis in ipsum odit!</p>
                 </div>
-                <div class="tools__ttem col-lg-4">
+                <div class="tools__ttem col-4">
                     <h2 class="tools__title"><i class="fa fa-refresh t" aria-hidden="true"></i>unlimited options</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad, aspernatur autem
                         consequuntur ea et eveniet id illo in inventore ipsa laboriosam nihil quibusdam quod ratione
                         rerum sapiente tempora voluptatem!</p>
                 </div>
-                <div class="tools__ttem col-lg-4">
+                <div class="tools__ttem col-4">
                     <h2 class="tools__title"><i class="fa fa-wordpress t" aria-hidden="true"></i>wordpress</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus asperiores at beatae
                         blanditiis culpa eaque eius enim impedit ipsam laboriosam modi molestias omnis reiciendis
                         reprehenderit saepe, soluta temporibus? At, porro.</p>
                 </div>
-                <div class="tools__ttem col-lg-4">
+                <div class="tools__ttem col-4">
                     <h2 class="tools__title"><i class="fa fa-shopping-cart t" aria-hidden="true"></i>e-commerce</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cupiditate deleniti dolorem
                         doloremque facilis labore libero quam, quo repellendus temporibus? Cum error fuga ipsa magnam
                         neque non nostrum perferendis sit.</p>
                 </div>
-                <div class="tools__ttem col-lg-4">
+                <div class="tools__ttem col-4">
                     <h2 class="tools__title"><i class="fa fa-sliders t" aria-hidden="true"></i>customisaible design</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci, assumenda, atque
                         delectus eaque eligendi excepturi exercitationem fugit incidunt inventore odio provident quis
                         quos recusandae repellat repellendus tempore? Dignissimos, molestias?</p>
                 </div>
-                <div class="tools__ttem col-lg-4">
+                <div class="tools__ttem col-4">
                     <h2 class="tools__title"><i class="fa fa-question-circle t" aria-hidden="true"></i>support</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ab aut consequuntur dignissimos
                         distinctio eaque eligendi eos facere facilis illum impedit, laudantium nesciunt porro
@@ -113,28 +113,28 @@
                     tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
             <div class="dreamteam__grid row">
-                <div class="dreamteam__grid--item col-lg-3 col-md-3 col-sm-3">
+                <div class="dreamteam__grid--item col-3">
                     <img src="img/layer-5.png" alt="oldman">
                 </div>
-                <div class="dreamteam__grid--item col-lg-3 col-md-3 col-sm-3">
+                <div class="dreamteam__grid--item col-3">
                     <img src="img/layer-6.png" alt="lady">
                 </div>
-                <div class="dreamteam__grid--item col-lg-3 col-md-3 col-sm-3">
+                <div class="dreamteam__grid--item col-3">
                     <img src="img/layer-7.png" alt="gay">
                 </div>
-                <div class="dreamteam__grid--item col-lg-3 col-md-3 col-sm-3">
+                <div class="dreamteam__grid--item col-3">
                     <img src="img/layer-8.png" alt="yang-lady">
                 </div>
-                <div class="dreamteam__grid--item col-lg-3 col-md-3 col-sm-3">
+                <div class="dreamteam__grid--item col-3">
                     <img src="img/layer-9.png" alt="agressive">
                 </div>
-                <div class="dreamteam__grid--item col-lg-3 col-md-3 col-sm-3">
+                <div class="dreamteam__grid--item col-3">
                     <img src="img/layer-10.png" alt="cold">
                 </div>
-                <div class="dreamteam__grid--item col-lg-3 col-md-3 col-sm-3">
+                <div class="dreamteam__grid--item col-3">
                     <img src="img/layer-11.png" alt="kid">
                 </div>
-                <div class="dreamteam__grid--item col-lg-3 col-md-3 col-sm-3">
+                <div class="dreamteam__grid--item col-3">
                     <img src="img/layer-12.png" alt="sick">
                 </div>
             </div>
@@ -142,17 +142,17 @@
     </section>
     <section class="readmore__wrap">
         <div class="container">
-            <div class="readmore col-lg-12">
-                <p class="readmore__subtitle col-lg-6">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+            <div class="readmore col">
+                <p class="readmore__subtitle col">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
                     diam nonummy nibh euismod</p>
-                <button class="readmore__btn col-lg-1">read more</button>
+                <button class="readmore__btn col-1">read more</button>
             </div>
         </div>
     </section>
     <section class="partner">
         <div class="container">
         <div class="partners  row">
-                <div id="carouselExampleIndicators" class="carousel slide col-lg-6 row" data-ride="carousel">
+                <div id="carouselExampleIndicators" class="carousel slide col row" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -197,7 +197,7 @@
                     </a>
                 </div>
 
-                <div class="partners__labels  col-lg-6 col-md-6 col-sm-6 row">
+                <div class="partners__labels  col row">
                     <div class="partners__labels--img col-lg-4 col-md-4 col-sm-4"><img src="img/layer-14.png" alt=""></div>
                     <div class="partners__labels--img col-lg-4 col-md-4 col-sm-4"><img src="img/layer-15.png" alt=""></div>
                     <div class="partners__labels--img col-lg-4 col-md-4 col-sm-4"><img src="img/layer-16.png" alt=""></div>
@@ -211,13 +211,13 @@
     <section class="form">
         <div class="container">
             <div class="form  row">
-                <div class="form__tit col-lg-6 col-md-6 col-sm-6">
+                <div class="form__tit col">
                     <h2 class="form__title">you think we`re cool ? let`s work together</h2>
                     <button class="form__btn">get in touch</button>
                 </div>
-                <div class="form__connect--white col-lg-6">
+                <div class="form__connect--white col">
                     <h2 class="form__rectangle--title">stay informed with our newsletter</h2>
-                    <p class="form__rectangle--sub col-lg-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    <p class="form__rectangle--sub col">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Ad at autem doloremque doloribus eius
                         error eum impedit incidunt ipsa nobis non perspiciatis, praesentium quam quisquam reiciendis,
                         rem sapiente, ut vitae?
@@ -236,7 +236,7 @@
 <footer class="footer">
     <div class="container">
         <div class="row">
-        <ul class="footer__links col-lg-6 col-md-6 col-sm-6">
+        <ul class="footer__links col">
             <li><a href="#">home</a></li>
             <li><a href="index2.html">about us</a></li>
             <li><a href="#">services</a></li>
@@ -244,7 +244,7 @@
             <li><a href="#">blog</a></li>
             <li><a href="#">contact us</a></li>
         </ul>
-        <div class="footer__socials col-lg-6 col-md-6 col-sm-6">
+        <div class="footer__socials col">
             <p>Created by akhouad 2016. All Rights Reserved</p>
             <ul class="footer__socials--fa  ">
                 <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
