--- a/index2.html
+++ b/index2.html
@@ -87,7 +87,7 @@
             </div>
             </div>
         </div>
-        <div class="containermap col-6" id="map">
+        <div class="containermap col" id="map">
 
         </div>
     </div>
@@ -95,6 +95,7 @@
 
 <section class="green">
     <div class="container">
+        <div class="row">
         <div class="form  row">
             <div class="form__tit col">
                 <h2 class="form__title">you think we`re cool ? let`s work together</h2>
@@ -102,7 +103,7 @@
             </div>
             <div class="form__connect--white col">
                 <h2 class="form__rectangle--title">stay informed with our newsletter</h2>
-                <p class="form__rectangle--sub col-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                <p class="form__rectangle--sub col">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Ad at autem doloremque doloribus eius
                     error eum impedit incidunt ipsa nobis non perspiciatis, praesentium quam quisquam reiciendis,
                     rem sapiente, ut vitae?
@@ -115,6 +116,7 @@
                 </form>
             </div>
         </div>
+    </div>
     </div>
 </section>
 <footer class="footer">
@@ -147,6 +149,7 @@
             </div>
 
         </div>
+    </div>
     </div>
 </footer>
 
